14-added info,routing,controller and twig for simple movie listing

--- a/modules/custom/reserve_movies/reserve_movies.routing.yml
+++ b/modules/custom/reserve_movies/reserve_movies.routing.yml
@@ -1,7 +1,7 @@
-reserve_movies.testPage:
-  path: '/movie-reservation'
+movie-reservation.testPage:
+  path: /movie-reservation
   defaults:
-    _controller: '\Drupal\reserve_movies\Controller\MovieReservationController::testPage'
+    _controller: Drupal\reserve_movies\Controller\MovieReservationController::testPage
     _title: 'Welcome to our test page'
   requirements:
     _permission: 'access content'
