Modified controller, route, twig and theme hook according to requested changed functionality which now shows movies from database instead of hardcoded ones

--- a/modules/custom/reserve_movies/reserve_movies.routing.yml
+++ b/modules/custom/reserve_movies/reserve_movies.routing.yml
@@ -1,7 +1,7 @@
-movie-reservation.testPage:
+movie-reservation.showMovies:
   path: /movie-reservation
   defaults:
-    _controller: Drupal\reserve_movies\Controller\MovieReservationController::testPage
+    _controller: Drupal\reserve_movies\Controller\MovieReservationController::showMovies
     _title: 'Welcome to our test page'
   requirements:
     _permission: 'access content'
