#16-Added a dropdown list with genres, clicking on a certain genre takes you to a page with movies of the selected genre only. Genre in the dropdown persist between pages(localStorage)

--- a/modules/custom/reserve_movies/reserve_movies.info.yml
+++ b/modules/custom/reserve_movies/reserve_movies.info.yml
@@ -3,3 +3,6 @@ description: This module initially shows basic info on movies, later on it will 
 type: module
 core_version_requirement: ^9
 package: Custom
+libraries: 
+  - reserve_movies/reserve_movies
+  
