--- a/modules/custom/reserve_movies/reserve_movies.routing.yml
+++ b/modules/custom/reserve_movies/reserve_movies.routing.yml
@@ -5,4 +5,6 @@ movie-reservation.showMovies:
     _title: 'Welcome to our test page'
   requirements:
     _permission: 'access content'
- 
+  methods: [GET]
+  options:
+    no_cache: 'TRUE'
